--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -59,6 +59,9 @@ body {
         border-radius: 5px;
         background: #f0f1f8;
         padding: 0 20px;
+        &.error {
+            border: 1px solid #ff0000;
+        }
     }
     textarea {
         min-height: 110px;
@@ -81,12 +84,15 @@ body {
         &:hover {
             background: darken(#3e2093, 15%);
         }
+        &:disabled {
+            background: rgb(87, 86, 86);
+        }
     }
     &.info-btn {
         color: #fff;
-        background: #299426;
+        background: #185216;
         &:hover {
-            background: darken(#299426, 15%);
+            background: darken(#185216, 15%);
         }
     }
 }
@@ -98,16 +104,16 @@ body {
 }
 
 .message {
-	margin-top: 20px;
-	font-size: 20px;
-	font-weight: bold;
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .modal {
     display: flex;
-	transform: scale(0);
+    transform: scale(0);
     opacity: 0;
-    transition: opacity .5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
     align-items: center;
     justify-content: center;
     position: fixed;
@@ -117,7 +123,7 @@ body {
     overflow-y: auto;
     cursor: pointer;
     &.open {
-		transform: scale(1);
+        transform: scale(1);
         opacity: 1;
     }
 }
@@ -152,9 +158,9 @@ body {
     outline-offset: 3px;
     border-radius: 3px;
     transition: outline-color 0.15s ease;
-	&:hover {
-		transform: scale(1.05) translate(1px, -1px);
-	}
+    &:hover {
+        transform: scale(1.05) translate(1px, -1px);
+    }
     &:focus-visible {
         outline-color: #ff0000;
     }
